# rag-chat-backend

./: .env.example  .env.test  .gitignore  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
docker/api/: Dockerfile
src/rag_chat_backend/: main.py
src/rag_chat_backend/api/: __init__.py
src/rag_chat_backend/api/v1/: __init__.py  health_chek.py  healthcheck.py
tests/api/v1/: test_health_check.py  test_healthcheck.py
