[project]
name = "rag-chat-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "yusuke_murata09",email = "yusuke.murata@novel.jpn.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "llama-index (>=0.12.36,<0.13.0)",
    "llama-index-embeddings-azure-openai (>=0.3.5,<0.4.0)",
    "mysqlclient (>=2.2.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "rag_chat_backend", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
